--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ qt_add_qml_module(appsip-client
     QML_FILES
         Main.qml
         QML_FILES CallScreen.qml
+        QML_FILES ContactsScreen.qml
 )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
