--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ qt_add_qml_module(appsip-client
         Main.qml
         QML_FILES CallScreen.qml
         QML_FILES ContactsScreen.qml
+        QML_FILES HistoryScreen.qml
 )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
