feat: save accounts in db

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ qt_add_qml_module(appsip-client
         SOURCES models/settingsmanager.h models/settingsmanager.cpp
         SOURCES core/audiomanager.h core/audiomanager.cpp
         SOURCES core/sipmanager.h core/sipmanager.cpp
+        SOURCES models/accountsmodel.h models/accountsmodel.cpp
 )
 target_include_directories(appsip-client
     PRIVATE
